# pyopenjtalk-plus

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  setup.py  update_dict.sh
.github/workflows/: build-wheels.yml  build_wheels.yml  ci.yml  deploy.yml
docs/: conf.py
docs/notebooks/: Demo.ipynb
openjtalk-doc/: 辞書の解説.md
pyopenjtalk/: __init__.py  __main__.py  hougen.py  htsengine.pyi  htsengine.pyx  openjtalk.pyi  openjtalk.pyx  types.py  utils.py
pyopenjtalk/bnken_jdic/: .gitignore  AUTHORS  ChangeLog  Makefile  README.md  build.sh  config.status  configure  configure.ac  make.sh  unk.def  unk.dic
pyopenjtalk/bnken_jdic/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
pyopenjtalk/dictionary/: fillers.csv  kanji-1gram-naist-jdic.csv  kanji-1gram-unidic-csj.csv  kanji-3gram-unidic-csj.csv  katakana-naist-jdic.csv  rare_syllables.csv  symbols.csv
pyopenjtalk/openjtalk/: jpcommon.pxd  mecab.pxd  text2mecab.pxd
pyopenjtalk/user_dict_src/: bccwj_02_2gram.csv  bccwj_03_2gram.csv  bccwj_04_2gram.csv  bccwj_05_2gram.csv  bccwj_05_3gram.csv  filler-jouyou.csv
pyopenjtalk/user_dictionary/: _build.py  _set_cost.py  bccwj_02_2gram.dic  bccwj_03_2gram.dic  bccwj_04_2gram.dic  bccwj_05_2gram.dic  filler-jouyou.dic  info.txt  jawiki-kana-kanji-01-kanji-2gram.dic  jawiki-kana-kanji-02-kanji-2gram.dic  jawiki-kana-kanji-03-kanji-2gram.dic
pyopenjtalk/yomi_model/: convert_onnx.py  nani_enc.onnx  nani_enc.pickle  nani_model.onnx  nani_model.pickle  nani_predict.py
scripts/: migrate_nani_model_onnx.py  modify_dictionary.py  sort_dictionary_csv.py
tests/: test_htsengine.py  test_nani_predict.py  test_openjtalk.py  test_pyopenjtalk_dictionary.py
