[build-system]
requires = [
    "setuptools>=64",
    "cython>=3",
    "cmake",
    # ビルド時は必ず numpy 2.x 系をインストールする
    # ref: https://numpy.org/doc/stable/dev/depending_on_numpy.html#numpy-2-0-specific-advice
    "numpy>=2.0; python_version>='3.9'",
    "oldest-supported-numpy; python_version<'3.9'",
]
build-backend = "setuptools.build_meta"

# Below are the development commands for Unix:
[tool.taskipy.tasks]
# .venv/bin/pip uninstall -y setuptools <- magic!
install = "if [ ! -d '.venv' ]; then python -m venv .venv; fi && .venv/bin/pip uninstall -y setuptools && .venv/bin/pip install -e '.[dev,test,marine]' && .venv/bin/pip install 'setuptools<60' pipx"
build = ".venv/bin/pipx run build"
build-dictionary = ".venv/bin/python -c 'import pyopenjtalk; pyopenjtalk.build_mecab_dictionary()'"
clean = "rm -rf build dist pyopenjtalk_plus.egg-info pyopenjtalk/htsengine.cpp pyopenjtalk/htsengine*.so pyopenjtalk/openjtalk.cpp pyopenjtalk/openjtalk*.so"
lint = ".venv/bin/pysen run lint"
format = ".venv/bin/pysen run format"
test = ".venv/bin/pytest"

[tool.pysen]
version = "0.10.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false # TODO: enable mypy in the future
mypy_preset = "strict"
line_length = 100
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
